<resources>
    <string name="app_name">Test Ta Culture</string>
    <string name="pseudo">Adresse Mail</string>
    <string name="password">Mot de passe</string>
    <string name="button">se connecter</string>
    <string name="Creer">Créer un compte</string>
    <string name="Question">%1$s Question</string>
    <string name="score">0</string>
    <string name="musique">Cliquez pour écouter l\'extrait</string>
    <string name="reponse1">Reponse 1</string>
    <string name="reponse2">Reponse 2</string>
    <string name="reponse3">Reponse 3</string>
    <string name="reponse4">Reponse 4</string>
    <string name="scorelabel">Score : </string>
    <string name="questionSuivante">Question suivante</string>
</resources>